remove auth explicity