@@ -7,28 +7,32 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
+
+import static com.navas.security.user.Permission.*;
 
 @RequiredArgsConstructor
 public enum Role {
+
     USER(Collections.emptySet()),
     ADMIN(
             Set.of(
-                    Permission.ADMIN_READ,
-                    Permission.ADMIN_UPDATE,
-                    Permission.ADMIN_CREATE,
-                    Permission.ADMIN_DELETE,
-                    Permission.MANAGER_READ,
-                    Permission.MANAGER_UPDATE,
-                    Permission.MANAGER_CREATE,
-                    Permission.MANAGER_DELETE
+                    ADMIN_READ,
+                    ADMIN_UPDATE,
+                    ADMIN_DELETE,
+                    ADMIN_CREATE,
+                    MANAGER_READ,
+                    MANAGER_UPDATE,
+                    MANAGER_DELETE,
+                    MANAGER_CREATE
             )
     ),
     MANAGER(
             Set.of(
-                    Permission.MANAGER_READ,
-                    Permission.MANAGER_UPDATE,
-                    Permission.MANAGER_CREATE,
-                    Permission.MANAGER_DELETE
+                    MANAGER_READ,
+                    MANAGER_UPDATE,
+                    MANAGER_DELETE,
+                    MANAGER_CREATE
             )
     );
 
@@ -36,11 +40,10 @@ public enum Role {
     private final Set<Permission> permissions;
 
     final public List<SimpleGrantedAuthority> getAuthorities() {
-        final var authorities = getPermissions()
+        var authorities = getPermissions()
                 .stream()
                 .map(permission -> new SimpleGrantedAuthority(permission.getPermission()))
-                .toList();
-
+                .collect(Collectors.toList());
         authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
         return authorities;
     }
